# knowrob_rsg

./: .gitignore  CMakeLists.txt  README.md  build.gradle  package.xml  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
knowrob_rsg/: build.gradle
knowrob_rsg/src/main/java/org/iai/knowrob_rsg/: KB2RSG.java  Listener.java  RSGConnection.java
owl/: knowrob-gis.owl
prolog/: init.pl  knowrob-rsg.pl
