<?xml version="1.0"?>
<package>
  <name>knowrob_rsg</name>
  <version>0.0.0</version>
  <description>The knowrob_rsg package</description>
  
  <maintainer email="bbrieber@cs.uni-bremen.de">Benjamin Brieber</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosprolog</build_depend>
  <build_depend>knowrob_common</build_depend>
  <run_depend>rosprolog</run_depend>
  <build_depend>knowrob_common</build_depend>
  <run_depend>knowrob_srdl</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>